<resources>
    <string name="app_name">Cryptolocker</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="nav_header_title">CrptoLocker</string>
    <string name="nav_header_subtitle">We Keep It Safe</string>

    <string name="dashboard">Dashboard</string>

    <string name="menu_home">Home</string>
    <string name="menu_create">Create</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>