<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dashboard"
        android:title="@string/dashboard">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/icons8_home_96"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_create"
                    android:icon="@drawable/icons8_create_96"
                    android:title="@string/menu_create" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/icons8_settings_96"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icons8_logout_96"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>


</menu>